Added local database and created an activity to display database content as listitem.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
+    <string name="scoreboard_title">SCOREBOARD</string>
+    <string name="query_hint">Anıl...</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
